--- a/app/src/main/res/layout/item_drawer_link.xml
+++ b/app/src/main/res/layout/item_drawer_link.xml
@@ -1,35 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="linkItem"
-            type="my.handbook.ui.drawer.DrawerItem.LinkItem"/>
+            type="my.handbook.ui.drawer.DrawerItem.LinkItem" />
+
         <variable
             name="listener"
-            type="my.handbook.ui.drawer.DrawerAdapter.DrawerAdapterListener"/>
+            type="my.handbook.ui.drawer.DrawerAdapter.DrawerAdapterListener" />
     </data>
 
     <TextView
         android:id="@+id/link_item_title"
         android:layout_width="match_parent"
         android:layout_height="@dimen/drawer_item_height"
+        android:background="?attr/selectableItemBackground"
+        android:drawablePadding="@dimen/grid_4"
+        android:ellipsize="end"
+        android:gravity="center_vertical|start"
+        android:lines="1"
+        android:onClick="@{() -> listener.onLinkClicked(linkItem)}"
         android:paddingLeft="@dimen/grid_4"
         android:paddingRight="@dimen/grid_4"
-        android:background="?attr/selectableItemBackground"
-        android:gravity="center_vertical|start"
-        android:onClick="@{() -> listener.onLinkClicked(linkItem)}"
-        android:ellipsize="end"
-        android:lines="1"
         android:text="@{linkItem.titleRes}"
-        android:textColor="@color/color_on_primary_surface_emphasis_medium"
         android:textAppearance="?attr/textAppearanceSubtitle1"
-        android:drawablePadding="@dimen/grid_4"
+        android:textColor="@color/color_on_primary_surface_emphasis_medium"
         app:drawableStart="@{linkItem.iconRes}"
         app:drawableTint="@color/color_on_primary_surface_emphasis_medium"
-        tools:text="Link text"/>
+        tools:text="Link text" />
 
 </layout>
