--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,7 +49,8 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     app:srcCompat="@drawable/ic_round_arrow_drop_up"
-                    app:tint="?colorOnPrimarySurface" />
+                    app:tint="?colorOnPrimarySurface"
+                    tools:ignore="ContentDescription" />
 
                 <TextView
                     android:id="@+id/bottom_app_bar_title"
