--- a/app/src/main/res/layout/item_drawer_divider.xml
+++ b/app/src/main/res/layout/item_drawer_divider.xml
@@ -1,26 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
+
         <variable
             name="dividerItem"
-            type="my.handbook.ui.drawer.DrawerItem.DividerItem"/>
+            type="my.handbook.ui.drawer.DrawerItem.DividerItem" />
     </data>
 
     <TextView
         android:id="@+id/divider_subtitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="@dimen/grid_4"
+        android:layout_marginVertical="@dimen/grid_2"
+        android:drawablePadding="@dimen/grid_4"
         android:paddingLeft="@dimen/grid_4"
         android:paddingRight="@dimen/grid_4"
-        android:layout_marginVertical="@dimen/grid_2"
-        android:layout_marginHorizontal="@dimen/grid_4"
         android:text="@{dividerItem.titleRes}"
         android:textAppearance="?attr/textAppearanceOverline"
         android:textColor="@color/color_on_primary_surface_emphasis_medium"
-        android:drawablePadding="@dimen/grid_4"
-        app:drawableTopCompat="@drawable/nav_divider_top"/>
+        app:drawableTopCompat="@drawable/nav_divider_top" />
 
 </layout>
