--- a/app/src/main/res/layout/item_drawer_section.xml
+++ b/app/src/main/res/layout/item_drawer_section.xml
@@ -1,38 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="sectionItem"
-            type="my.handbook.ui.drawer.DrawerItem.SectionItem"/>
+            type="my.handbook.ui.drawer.DrawerItem.SectionItem" />
+
         <variable
             name="listener"
-            type="my.handbook.ui.drawer.DrawerAdapter.DrawerAdapterListener"/>
+            type="my.handbook.ui.drawer.DrawerAdapter.DrawerAdapterListener" />
     </data>
 
     <CheckedTextView
         android:id="@+id/section_item_title"
         android:layout_width="match_parent"
         android:layout_height="@dimen/drawer_item_height"
-        android:paddingLeft="@dimen/grid_4"
-        android:paddingRight="@dimen/grid_4"
         android:background="?attr/selectableItemBackground"
-        android:gravity="center_vertical|start"
-        android:onClick="@{() -> listener.onSectionClicked(sectionItem)}"
-        android:ellipsize="end"
-        android:lines="1"
-        android:drawableStart="@drawable/ic_round_dot"
-        android:checked="@{sectionItem.section.selected}"
         android:checkMark="@drawable/ic_round_check"
         android:checkMarkTint="@color/color_drawer_item"
-        android:textColor="@color/color_drawer_item"
-        android:textAppearance="?attr/textAppearanceSubtitle1"
+        android:checked="@{sectionItem.section.selected}"
+        android:drawableStart="@drawable/ic_round_dot"
         android:drawablePadding="@dimen/grid_3"
-        app:sectionText="@{sectionItem.section.id}"
+        android:ellipsize="end"
+        android:gravity="center_vertical|start"
+        android:lines="1"
+        android:onClick="@{() -> listener.onSectionClicked(sectionItem)}"
+        android:paddingLeft="@dimen/grid_4"
+        android:paddingRight="@dimen/grid_4"
+        android:textAppearance="?attr/textAppearanceSubtitle1"
+        android:textColor="@color/color_drawer_item"
         app:sectionDrawable="@{sectionItem.section}"
-        tools:text="Section name"/>
+        app:sectionText="@{sectionItem.section.id}"
+        tools:text="Section name" />
 
 </layout>
