--- a/app/src/main/res/layout/item_search_result.xml
+++ b/app/src/main/res/layout/item_search_result.xml
@@ -42,7 +42,7 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:sectionText="@{item.section}"
                 app:sectionTextColor="@{item.section}"
-                tools:text="@string/section_1"
+                tools:text="Probability theory"
                 tools:textColor="?colorPrimary" />
 
             <TextView
