--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -47,7 +47,8 @@
             style="@style/Widget.Handbook.FullscreenProgressBar"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:goneIf="@{!model.isLoading}" />
+            app:goneIf="@{!model.isLoading}"
+            tools:visibility="gone" />
 
     </FrameLayout>
 
